--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://leewebstechnologies/github.io/isiakolaniyan",
+  "homepage": "http://leewebstechnologies/github.io/isiakolaniyan",
   "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
